objects/User_Access_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level_Territory_ID__c</fullName>
        <label>Access Level Territory ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Sub_Type__c</fullName>
        <label>Access Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Call_Centre__c</fullName>
        <label>Marketing Call Centre</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defines if the rule is being used for user creation</description>
        <label>Rule IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Access_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if Access Level is required for this rule.</description>
        <label>Show Access Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAA_2nd_Lvl_Approval_Queue_ID__c</fullName>
        <label>UAA 2nd Lvl Approval Queue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_2nd_Lvl_Approval_Queue_Name__c</fullName>
        <label>UAA 2nd Lvl Approval Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_2nd_Lvl_Approval_User_IDs__c</fullName>
        <description>Semicolon separated string of Approvers for Access Rule</description>
        <label>UAA 2nd Lvl Approval User IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_Customer_Permission__c</fullName>
        <label>UAA Customer Permission</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UAA_Director_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAA Director Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAA_Permission_Sets_IDs__c</fullName>
        <label>UAA Permission Sets IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UAA_Permission_Sets_Names__c</fullName>
        <label>UAA Permission Sets Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UAA_Profile_ID__c</fullName>
        <label>UAA Profile ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_Profile_Name__c</fullName>
        <label>UAA Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_Public_Group_IDs__c</fullName>
        <label>UAA Public Group IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UAA_Public_Group_Names__c</fullName>
        <label>UAA Public Group Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UAA_Role_ID__c</fullName>
        <label>UAA Role ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_Role_Name__c</fullName>
        <label>UAA Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAA_Service_Cloud_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAA Service Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAA_Theatre_Name__c</fullName>
        <label>UAA Theatre Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>This Access Rule object defines the Rules used to provision SalesForce.com access to Non-Sales users who are requesting access to Salesforce.com using new User Access Request Tool http://sfdcuseraccess.cloudapps.cisco.com/SFDCUserAccess/</description>
    <label>User Access Automation Rules</label>
    <nameField>
        <displayFormat>Rule {0000}</displayFormat>
        <label>User Access Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Access Automation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Rules</fullName>
        <columns>NAME</columns>
        <columns>Access_Level__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Access_Sub_Type__c</columns>
        <columns>Show_Access_Level__c</columns>
        <columns>UAA_Director_Approval_Required__c</columns>
        <columns>UAA_Profile_Name__c</columns>
        <columns>UAA_Permission_Sets_Names__c</columns>
        <columns>UAA_Public_Group_Names__c</columns>
        <columns>UAA_Public_Group_IDs__c</columns>
        <columns>UAA_Customer_Permission__c</columns>
        <columns>Access_Level_Territory_ID__c</columns>
        <columns>UAA_Theatre_Name__c</columns>
        <columns>UAA_2nd_Lvl_Approval_User_IDs__c</columns>
        <columns>UAA_Permission_Sets_IDs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rule_IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Rules</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Rules</fullName>
        <columns>NAME</columns>
        <columns>Rule_IsActive__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Access_Level__c</columns>
        <columns>Access_Sub_Type__c</columns>
        <columns>UAA_Theatre_Name__c</columns>
        <columns>UAA_Public_Group_IDs__c</columns>
        <columns>UAA_Role_ID__c</columns>
        <columns>UAA_Profile_ID__c</columns>
        <columns>UAA_Customer_Permission__c</columns>
        <columns>Access_Level_Territory_ID__c</columns>
        <columns>UAA_2nd_Lvl_Approval_User_IDs__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UAA_Permission_Sets_IDs__c</columns>
        <columns>UAA_2nd_Lvl_Approval_Queue_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GC_R_W_Rules</fullName>
        <columns>NAME</columns>
        <columns>Rule_IsActive__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Access_Level__c</columns>
        <columns>Access_Sub_Type__c</columns>
        <columns>UAA_Public_Group_IDs__c</columns>
        <columns>UAA_Customer_Permission__c</columns>
        <columns>Access_Level_Territory_ID__c</columns>
        <columns>UAA_2nd_Lvl_Approval_User_IDs__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UAA_Permission_Sets_IDs__c</columns>
        <columns>UAA_2nd_Lvl_Approval_Queue_ID__c</columns>
        <columns>UAA_Profile_ID__c</columns>
        <columns>UAA_Role_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UAA_Profile_Name__c</field>
            <operation>contains</operation>
            <value>china</value>
        </filters>
        <label>GC R/W Rules</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NGCC_Rules</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Access_Sub_Type__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Marketing_Call_Centre__c</columns>
        <columns>Rule_IsActive__c</columns>
        <columns>UAA_2nd_Lvl_Approval_Queue_ID__c</columns>
        <columns>UAA_2nd_Lvl_Approval_User_IDs__c</columns>
        <columns>UAA_Permission_Sets_IDs__c</columns>
        <columns>UAA_Profile_ID__c</columns>
        <columns>UAA_Profile_Name__c</columns>
        <columns>UAA_Role_ID__c</columns>
        <columns>UAA_Role_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>NGCC Call Center Agent</value>
        </filters>
        <label>NGCC Rules</label>
        <language>en_US</language>
    </listViews>
</CustomObject>